# picturify-rs

./: Cargo.toml  README.md
benches/processing-bench/: Cargo.toml
benches/processing-bench/src/: bench.rs  common.rs  get_image.rs  main.rs
benches/processing-bench/src/color/: negative.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/commands/color/: negative.rs  sepia.rs
cli/src/commands/common/: image.rs  mod.rs  movie.rs  none.rs  picturify.rs
cli/src/commands/common/color/: mod.rs  negative.rs  sepia.rs
cli/src/commands/common/common/: image.rs  mod.rs  none.rs  picturify.rs
cli/src/commands/noise/: kuwahara.rs  median.rs
cli/src/handlers/: mod.rs
cli/src/handlers/color/: mod.rs  negative.rs  sepia.rs
cli/src/handlers/common/: image.rs  mod.rs  none.rs
cli/src/handlers/noise/: kuwahara.rs  median.rs
cli/src/metadata/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  metadata.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/commands/common/: arg.rs  command.rs  completions.rs  image.rs  mod.rs  movie.rs  picturify.rs
crates/cli/src/commands/common/args/: common.rs
crates/cli/src/commands/image/: mod.rs
crates/cli/src/commands/image/blob/: laplacian_of_gaussian.rs
crates/cli/src/commands/image/color/: brightness.rs  grayscale.rs  mod.rs  negative.rs  quantization.rs  sepia.rs
crates/cli/src/commands/image/common/: mod.rs  none.rs  passthrough.rs
crates/cli/src/commands/image/edge/: emboss.rs  mod.rs  prewitt.rs  sobel.rs  sobel_rgb.rs
crates/cli/src/commands/image/geometry/: crop.rs  scale.rs  (+1 more)
crates/cli/src/commands/movie/: mod.rs
crates/cli/src/commands/noise/: kuwahara.rs
crates/cli/src/commands/parsers/: angle.rs  crop_border.rs  mod.rs  scale_strategy.rs  size.rs
crates/cli/src/common/: filter_group.rs  logging.rs  mod.rs  threading.rs
crates/cli/src/error/: mod.rs
crates/cli/src/handlers/: mod.rs
crates/cli/src/handlers/color/: negative.rs  sepia.rs
crates/cli/src/handlers/common/: completions.rs  handler.rs  image.rs  image_io.rs  mod.rs  movie.rs  picturify.rs
crates/cli/src/handlers/edge/: mod.rs
crates/cli/src/handlers/image/: mod.rs
crates/cli/src/handlers/movie/: mod.rs
crates/cli/src/handlers/noise/: kuwahara.rs  median.rs
crates/cli/src/metadata/: mod.rs
crates/cli/src/progress/: mod.rs  movie_progress_bar.rs  pipeline_progress_bar.rs
crates/cli/tests/: empty.rs  mod.rs
crates/cli/tests/common/: helpers.rs  test_files.rs
crates/cli/tests/image/: empty.rs  mod.rs
crates/cli/tests/image/color/: brightness.rs  grayscale.rs  mod.rs  negative.rs  quantization.rs  sepia.rs
crates/cli/tests/image/common/: mod.rs  passthrough.rs
crates/cli/tests/image/edge/: mod.rs  prewitt.rs  sobel.rs
crates/cli/tests/image/geometry/: crop.rs  mod.rs  rotate.rs
crates/cli/tests/image/noise/: bilateral_blur.rs  gaussian_blur.rs  kuwahara.rs  mean_blur.rs  median_blur.rs  mod.rs  sharpen.rs
crates/movie/: Cargo.toml
crates/movie/src/: error.rs  lib.rs  movie_pipe.rs  progress.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: custom.rs  lib.rs  metadata.rs  pipeline.rs
crates/pipeline/src/blob/: laplacian_of_gaussian.rs
crates/pipeline/src/color/: brightness.rs  grayscale.rs  mod.rs  negative.rs  quantization.rs  sepia.rs
crates/pipeline/src/common/: enlargement_crop_pipeline.rs  mod.rs  pipeline_progress.rs
crates/pipeline/src/edge/: emboss.rs  prewitt.rs  sobel.rs  sobel_rgb.rs
crates/pipeline/src/geometry/: crop.rs  mod.rs  rotate.rs  scale.rs
crates/pipeline/src/noise/: bilateral.rs  bilateral_blur.rs  gaussian_blur.rs  kuwahara.rs  mean.rs  mean_blur.rs  median.rs  median_blur.rs  mod.rs  sharpen.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/processing/: Cargo.toml  build.rs
crates/processing/csrc/: CMakeLists.txt  picturify-processing-opencl.c  picturify-processing-opencl.h
crates/processing/csrc/color/: sepia.c  sepia.h
crates/processing/csrc/common/: fast_image.c  fast_image.h  status.c  status.h
crates/processing/src/: lib.rs  metadata.rs
crates/processing/src/common/: execution.rs  functions.rs  mod.rs  processors.rs
crates/processing/src/common/kernels/: convolution.rs  mod.rs  prewitt.rs  sobel.rs  xy.rs
crates/processing/src/helpers/: kernels.rs  mod.rs
crates/processing/src/opencl_binds/: mod.rs
crates/processing/src/opencl_binds/common/: fast_image.rs  mod.rs
crates/processing/src/processors/: mod.rs
crates/processing/src/processors/blob/: laplacian_of_gaussian.rs  mod.rs
crates/processing/src/processors/color/: brightness.rs  gamma.rs  grayscale.rs  mod.rs  negative.rs  quantization.rs  remapping.rs  sepia.rs  threshold.rs
crates/processing/src/processors/edge/: canny.rs  emboss.rs  gradient_based.rs  gradient_based_rgb.rs  mod.rs  prewitt.rs  prewitt_rgb.rs  sobel.rs  sobel_rgb.rs
crates/processing/src/processors/geometry/: crop.rs  enlargement.rs  mod.rs  rotate_fixed.rs  rotate_flexible.rs  scale.rs
crates/processing/src/processors/internal/: convolution_rgb.rs  gradient_based.rs  gradient_based_rgb.rs  mod.rs
crates/processing/src/processors/math/: add.rs  mod.rs  subtract.rs
crates/processing/src/processors/noise/: bilateral.rs  bilateral_blur.rs  gaussian_blur.rs  kuwahara.rs  mean.rs  mean_blur.rs  median.rs  median_blur.rs  mod.rs  sharpen.rs
crates/processing/src/processors_gpu/: mod.rs
crates/processing/src/processors_gpu/color/: mod.rs  sepia.rs
crates/processing/src/processors_gpu/common/: fast_image.rs  mod.rs  status.rs
crates/processing/tests/: mod.rs
crates/processing/tests/common/: mod.rs
crates/processing/tests/common/kernels/: mod.rs
movie/: Cargo.toml
movie/src/: from_ffmpeg_frame.rs  lib.rs  movie_pipe.rs  pipeline.rs  to_ffmpeg_frame.rs  transcode_x264.rs
pipeline/: Cargo.toml
pipeline/src/: custom.rs  lib.rs  pipeline.rs
pipeline/src/color/: mod.rs  negative.rs  sepia.rs
pipeline/src/edge/: sobel.rs  sobel_rgb.rs
pipeline/src/noise/: kuwahara.rs  median.rs  mod.rs
playground/: Cargo.toml
playground/src/: main.rs
(+164 files in other folders)
