[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/pipeline",
    "crates/playground",
    "crates/processing",
    "crates/movie",
    "benches/processing-bench",
    "crates/testing"
]

[workspace.dependencies]
picturify-benchmark = { path = "benches/processing-bench" }
picturify-cli = { path = "crates/cli" }
picturify-core = { path = "crates/core" }
picturify-pipeline = { path = "crates/pipeline" }
picturify-playground = { path = "crates/playground" }
picturify-processing = { path = "crates/processing" }
picturify-movie = { path = "crates/movie" }
picturify-testing = { path = "crates/testing" }
log = "0.4.21"
simplelog = "0.12.2"
indicatif = "0.17.8"
image = "0.25.1"
thiserror = "1.0.58"
rayon = "1.10.0"
palette = "0.7.5"
clap = { version = "4.5.4", features = ["default", "derive", "cargo", "string"] }
criterion = "0.5.1"
assert_cmd = "2.0"
predicates = "3.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
regex = "1.10.5"
rand = "0.8.5"
colored = "2.1.0"
cmake = "0.1.50"
