[package]
name = "picturify-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-core = { path = "../core" }
picturify-pipeline = { path = "../pipeline" }
clap = { features = ["default", "derive", "cargo", "string"], version = "4.5.4" }
log = "0.4.21"
simplelog = "0.12.2"