[package]
name = "picturify-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-processing = { path = "../processing" }
picturify-core = { path = "../core" }
picturify-pipelines-macro = { path = "../pipelines-macro" }