[package]
name = "picturify-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-core = { path = "../core" }
picturify-processing = { path = "../processing" }
picturify-pipeline = { path = "../pipeline" }
picturify-movie = { path = "../movie" }
