[package]
name = "picturify-processing-benchmark"
version = "0.1.0-alpha"
authors = ["81999946+sobczal2@users.noreply.github.com"]
edition = "2021"

[dependencies]
picturify-processing.workspace = true
picturify-core.workspace = true
criterion.workspace = true

[[bench]]
name = "processing-bench"
path = "src/bench.rs"
harness = false