[package]
name = "picturify-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-core.workspace = true
picturify-pipeline.workspace = true
picturify-movie.workspace = true
picturify-processing.workspace = true
log.workspace = true
simplelog.workspace = true
clap.workspace = true
indicatif.workspace = true
thiserror.workspace = true
regex = "1.10.4"