[package]
name = "picturify-cli"
version = "0.1.0-alpha"
authors = ["81999946+sobczal2@users.noreply.github.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-core.workspace = true
picturify-pipeline.workspace = true
picturify-movie.workspace = true
picturify-processing.workspace = true
log.workspace = true
simplelog.workspace = true
clap.workspace = true
indicatif.workspace = true
thiserror.workspace = true
regex.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
uuid.workspace = true
rand.workspace = true
colored.workspace = true