[package]
name = "picturify-movie"
version = "0.1.0"
authors = ["81999946+sobczal2@users.noreply.github.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-pipeline.workspace = true
picturify-core.workspace = true
clap.workspace = true