[package]
name = "picturify-pipeline"
version = "0.1.0-alpha"
authors = ["81999946+sobczal2@users.noreply.github.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-processing.workspace = true
picturify-core.workspace = true
log.workspace = true
clap.workspace = true
