[package]
name = "picturify-playground"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picturify-core.workspace = true
picturify-processing.workspace = true
picturify-pipeline.workspace = true
picturify-movie.workspace = true
simplelog.workspace = true
log.workspace = true